--- a/Training/Testing/Unit_Testing/Mathoperations/Mathoperations.csproj
+++ b/Training/Testing/Unit_Testing/Mathoperations/Mathoperations.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Calculation\Calculation.csproj" />
+  </ItemGroup>
+
 </Project>
