--- a/Training/Testing/Unit_Testing/Tests/Tests.csproj
+++ b/Training/Testing/Unit_Testing/Tests/Tests.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Calculation\Calculation.csproj" />
     <ProjectReference Include="..\Mathoperations\Mathoperations.csproj" />
   </ItemGroup>
 
